--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,34 @@
 .App {
   text-align: center;
+  background-color: #282c34;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.homeTitle {
+  padding-top: 1.5rem;
+}
+
+.parallax {
+  /* The image used */
+  background-image: url("./assets/img/pexels-negative-space-97077.jpg");
+
+  /* Set a specific height */
+  height: 500px;
+
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.carouselImage {
+  justify-content: center;
+  display: flex;
 }
 
 @media (prefers-reduced-motion: no-preference) {
